# auditor

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  asdf.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
auditor/: __init__.py  aggregate.py  ast_util.py  baseline.py  builtins.py  cli.py  config.py  crossfile.py  dead_code.py  discovery.py  engine.py  fingerprints.py  fixture_usage.py  gate.py  ignores.py  index.py  logconfig.py  mcp_server.py  models.py  noqa.py  paths.py  plugins.py  private_usage.py  registry.py  roles.py  secrets_signatures.py  serve.py  settings_cohesion.py  skips.py  status.py
auditor/cli/: __init__.py  __main__.py  aggregate.py  apps.py  banner.py  config.py  console.py  crossfile.py  discover.py  graph.py  graph_stub.py  helpers.py  ignore.py  index.py  malware.py  manifest.py  options.py  plugins.py  render.py  report.py  rules.py  scan.py  self_update.py  summary.py  version.py
auditor/database/: __init__.py  base.py  files.py  findings.py  graph.py  ignores.py  repos.py  shapes.py  store.py
auditor/graph/: __init__.py  build.py  cluster.py  detectors.py  extract.py  model.py  naming.py  query.py  rank.py  resolve_edges.py  semantic_profile.py  tokens.py  usage.py  viz.py
auditor/graph/ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
auditor/languages/: base.py  comment_blocks.py  malware_signatures.py  malware_sweeps.py  secret_sweeps.py  sweep.py
auditor/languages/bash/: __init__.py  auditor.py  base.py
auditor/languages/config/: __init__.py  auditor.py  base.py
auditor/languages/manifest/: __init__.py  auditor.py  base.py
auditor/languages/python/: auditor.py  manifest.py  resolve.py  shapes.py
auditor/languages/typescript/: __init__.py  auditor.py  base.py  manifest.py  nodes.py  parser.py  shapes.py
auditor/malware/: __init__.py  clamav.py  dbs.py  install.py  osv.py  passes.py  rules.py  tools.py  walk.py
auditor/mcp/: __init__.py  artifacts.py  code_mode.py  graph_tools.py  helpers.py  ignore_tools.py  malware_tools.py  rules_tools.py  scan_tools.py  server.py
auditor/profiles/: all-strict.toml  base.toml  pydantic.toml  strict.toml
auditor/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
plugin/: .mcp.json  settings.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: auditor-reviewer.md
plugin/hooks/: _common.py  audit_edit.py  hooks.json  session_start.py  verify_stop.py
plugin/skills/aggregate-report/: SKILL.md
plugin/skills/audit-changes/: SKILL.md
plugin/skills/explore-graph/: SKILL.md
plugin/skills/judge-findings/: SKILL.md
plugin/skills/malware-scan/: SKILL.md
plugin/skills/setup-auditor/: SKILL.md
plugin/skills/write-detector/: SKILL.md  template.py
plugin/statusline/: auditor_status.py
scripts/: release.sh
tests/: _detector_cases.py  _support.py  _ts_cases.py  conftest.py  test_aggregate.py  test_ast_util.py  test_async_rules.py  test_audit_context.py  test_auditor_mechanics.py  test_baseline.py  test_builtins.py  test_cli.py  test_config.py  test_config_rules.py  test_correctness.py  test_crossfile.py  test_dead_code.py  test_detectors.py  test_discovery.py  test_dogfood.py  test_engine.py  test_fingerprints.py  test_gate.py  test_ignores.py  test_ignores_integration.py  test_index.py  test_index_ignores.py  test_index_partitioning.py  test_index_schema.py  test_json_reporter.py  test_languages_base.py  test_logconfig.py  test_manifest.py  test_mcp_server.py  test_models.py  test_noqa.py  test_oop.py  test_paths.py  test_plugins.py  test_private_usage.py  (+24 more)
tests/cli/: test_aggregate.py  test_config.py  test_crossfile.py  test_discover.py  test_errors.py  test_graph_stub.py  test_helpers.py  test_ignore.py  test_index.py  test_malware_cli.py  test_manifest.py  test_plugins.py  test_pretty_output.py  test_report.py  test_rules.py  test_scan.py  test_self_update.py  test_version.py
tests/fixtures/sample_projects/dashboard/: pyproject.toml
tests/fixtures/sample_projects/dashboard/backend/app/: __init__.py  main.py
tests/fixtures/sample_projects/dashboard/backend/app/api/: routes.py
tests/fixtures/sample_projects/dashboard/backend/app/core/: auth.py  config.py  legacy.py
tests/fixtures/sample_projects/dashboard/backend/app/models/: entities.py
tests/fixtures/sample_projects/dashboard/backend/app/schemas/: reports.py
tests/fixtures/sample_projects/dashboard/backend/app/services/: alerts.py  exporters.py  metrics.py  reports.py
tests/fixtures/sample_projects/dashboard/backend/tests/: test_metrics.py
tests/fixtures/sample_projects/dashboard/frontend/src/: routeTree.gen.ts
tests/fixtures/sample_projects/dashboard/frontend/src/components/: AlertsPanel.tsx  Clean.tsx  Dashboard.tsx  HostRow.tsx  MetricsTable.tsx  ServiceRow.tsx
tests/fixtures/sample_projects/dashboard/frontend/src/components/ui/: index.tsx
tests/fixtures/sample_projects/dashboard/frontend/src/hooks/: useMetrics.ts
tests/fixtures/sample_projects/dashboard/frontend/src/lib/: format.ts
tests/graph/: test_build.py  test_cli_graph.py  test_cli_graph_autoscan.py  test_cli_graph_export.py  test_cluster.py  test_detectors.py  test_engine_facts.py  test_extract.py  test_graph_rules.py  test_graph_serve.py  test_index_graph.py  test_mcp_graph.py  test_model.py  test_naming.py  test_query.py  test_rank.py  test_resolve_edges.py  test_semantic_profile.py  test_tokens.py  test_usage.py  test_viz.py
tests/languages/: test_base.py  test_comment_blocks.py
tests/malware/: conftest.py  test_clamav.py  test_dbs.py  test_install.py  test_integration.py  test_osv.py  test_passes.py  test_rules.py  test_tools.py  test_walk.py
tests/plugin/: test_audit_edit.py  test_hooks_wiring.py  test_plugin_manifest.py  test_session_start.py  test_skill_frontmatter.py  test_statusline.py  test_verify_stop.py
tests/reporters/: test_base.py  test_html_reporter.py  test_json_reporter.py  test_markdown_reporter.py  test_sarif_reporter.py
(+178 files in other folders)
