[project]
name = "auditr"  # PyPI distribution name (import package is `auditor`)
version = "0.2.0"
description = "A token-efficient repo auditor for coding agents"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.26",
    "loguru>=0.7",
]

[project.optional-dependencies]
mcp = ["fastmcp"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "fastmcp",
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
]
ts = [
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
]

[project.scripts]
auditr = "auditor.cli:app"
auditr-mcp = "auditor.mcp_server:main"
auditor = "auditor.cli:app"  # alias — matches the import package name
auditor-mcp = "auditor.mcp_server:main"  # alias

[tool.hatch.build.targets.wheel]
packages = ["auditor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = "--import-mode=importlib --ignore=tests/fixtures"

[tool.auditor]
extends = "strict"

[tool.ruff]
target-version = "py311"
extend-exclude = ["tests/fixtures"]  # intentional anti-pattern / broken fixtures

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length is not enforced

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # packages import submodules purely to register detectors/reporters

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
