[project]
name = "auditr"  # PyPI distribution name (import package is `auditor`)
version = "0.9.3"
description = "A deterministic codebase auditor for coding agents"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.26",
    "rich>=13",
    "loguru>=0.7",
]

[project.optional-dependencies]
mcp = ["fastmcp"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "commitizen",
    "fastmcp",
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
]
ts = [
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
]
graph = [
    "numpy>=2.1",
    "scikit-learn>=1.6",
    "snowballstemmer>=2.2",
    "networkx>=3",
]
# Experimental: lets a client LLM orchestrate the tools in a sandbox so large intermediate
# payloads never reach the model. Opt-in — also gated by the AUDITOR_CODE_MODE env flag.
code-mode = ["fastmcp[code-mode]"]

[project.scripts]
auditr = "auditor.cli:app"
auditr-mcp = "auditor.mcp_server:main"
auditor = "auditor.cli:app"  # alias — matches the import package name
auditor-mcp = "auditor.mcp_server:main"  # alias

[tool.hatch.build]
artifacts = ["auditor/graph/ui/dist/index.html"]

[tool.hatch.build.targets.wheel]
packages = ["auditor"]
exclude = [
    "auditor/graph/ui/node_modules",
    "auditor/graph/ui/src",
    "auditor/graph/ui/*.ts",
    "auditor/graph/ui/*.json",
    "auditor/graph/ui/*.html",
]
force-include = { "auditor/graph/ui/dist/index.html" = "auditor/graph/ui/dist/index.html" }

[tool.hatch.build.targets.sdist]
# Ship source, not the dev/session detritus that lives in the working tree — the default sdist
# otherwise sweeps in node_modules (20MB+ native binaries), agent worktrees, and scratch dirs.
exclude = [
    ".claude",
    ".superpowers",
    ".github",
    ".vscode",
    "auditor/graph/ui/node_modules",
    "**/node_modules",
    "*.db",
    ".coverage",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = "--import-mode=importlib --ignore=tests/fixtures"

[tool.auditor]
extends = "strict"

[tool.ruff]
target-version = "py311"
extend-exclude = ["tests/fixtures"]  # intentional anti-pattern / broken fixtures

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length is not enforced

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # packages import submodules purely to register detectors/reporters

[tool.commitizen]
# `uv run cz bump` picks the next version from the conventional commits since the last tag,
# updates the version everywhere, writes CHANGELOG.md, commits, and tags vX.Y.Z. Pushing that
# tag triggers .github/workflows/release.yml (build + publish to PyPI).
version_provider = "pep621"                    # source of truth = [project] version
version_files = ["auditor/__init__.py:__version__"]  # keep the runtime constant in lockstep
tag_format = "v$version"
annotated_tag = true                           # annotated tags (tagger + message), like the manual ones
major_version_zero = true                      # while 0.x, a breaking change bumps the minor
update_changelog_on_bump = true
bump_message = "chore: bump version to $new_version"
pre_bump_hooks = ["uv lock", "git add uv.lock"]  # fold the lockfile sync into the bump commit

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
