[project]
name = "pulse-dashboard"
version = "0.1.0"
dependencies = ["fastapi", "pydantic", "httpx", "sqlalchemy"]

[tool.auditor]
extends = "strict"

[tool.auditor.rules."PY-STYLE-FILE-SIZE".threshold.size]
file_max_lines = 120

[tool.auditor.rules."TS-STYLE-FILE-SIZE".threshold.size]
file_max_lines = 120

[tool.auditor.design_system]
ui_paths = ["@/components/ui"]
shell = "@/lib/ui"

[[tool.auditor.design_system.primitives]]
component = "Badge"
when_class = 'rounded-full bg-\w+-\d+/\d+'

[[tool.auditor.design_system.primitives]]
component = "Button"
size_override = true
